k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  labels:
    app: blog
spec:
  selector:
    matchLabels:
      app: blog
      role: web
  template:
    metadata:
      labels:
        app: blog
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/blog
        imagePullPolicy: IfNotPresent
        name: blog
        ports:
        - containerPort: 80
