k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
    role: web
  ports:
    - protocol: TCP
      port: 80
