k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
  - host: blog
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blog-service
            port:
              number: 80
